// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-divider full-width false 1`] = `
<mg-divider>
  <mock:shadow-root>
    <div class="mg-c-divider"></div>
  </mock:shadow-root>
</mg-divider>
`;

exports[`mg-divider full-width true 1`] = `
<mg-divider>
  <mock:shadow-root>
    <div class="mg-c-divider mg-c-divider--full-width"></div>
  </mock:shadow-root>
</mg-divider>
`;
